2013-07-13  Andreas K. Foerster  <info@akfoerster.de>

	* lua/multiplication.lua: clear board (no scrolling)

	* avatar.c (avt_show_text_cursor): text cursor modified

2013-07-11  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (check_textfile):
	treat .info files as plain text

	* lua/lua-akfavatar-prg.c (show_text):
	check if it's really UTF-8, otherwise fall back to CP1252

2013-07-10  Andreas K. Foerster  <info@akfoerster.de>

	* lua/interactive_lua.lua: fix handling of incomplete lines

	* lua/lua_avt.c (open_lua_akfavatar, panic):
	register a panic function

2013-07-09  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua_avt.c (lavt_utf8codepoints, lavt_utf8_iteration):
	new functions

2013-07-08  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua_avt.c (lavt_toutf8): new function
	lua/hexviewer.lua, lua/characters_tables.lua: adapted

2013-07-06  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, UTF-8.c (avt_detect_utf8): new function

	* lua/lua_avt.c (lavt_detect_utf8): new function

2013-07-02  Andreas K. Foerster  <info@akfoerster.de>

	* lua/characters_overview.lua (all_slowprint): fix: clear

2013-07-02  Andreas K. Foerster  <info@akfoerster.de>

	* lua/hexviewer.lua (printable): new function
	turn control characters into control pictures

------------------------------------------------------------------------

2013-06-30  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.24.0 released

2013-06-28  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avtaddons.h:
	define everything as extern "C" for C++

2013-06-20  Andreas K. Foerster  <info@akfoerster.de>

	* langposix.c (avt_get_language): support longer language codes

2013-06-19  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c: new macro MODULE
	(open_lua_akfavatar): renamed from luaopen_akfavatar_embedded
	lua/lua-akfavatar-prg.c: adapted

2013-06-18  Andreas K. Foerster  <info@akfoerster.de>
